# factorio_utilities

./: Cargo.toml
resources/build_scripts/: build_icons.py
resources/definitions/fluids/: fluids.ron
resources/definitions/items/: belts.ron  inserters.ron  pipes.ron  power_poles.ron  storage.ron
resources/definitions/recipes/: belts.ron
resources/item_definitions/: belts.ron  inserters.ron  pipes.ron  power_poles.ron  storage.ron
src/: lib.rs  main.rs  utils.rs
src/common/: log.rs  mod.rs
src/common/factorio/: belt.rs  crafter.rs  energy_source.rs  inserter.rs  item.rs  mod.rs  recipe.rs
src/dump_to_ron/: mod.rs  parsing.rs
src/fluids/: fluid.rs  mod.rs
src/items/: item.rs  mod.rs
src/recipes/: mod.rs  recipe.rs
