[package]
name = "factorio_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
colored = "2.0.0"
atomize = "0.1.3"
steamlocate = "1.1.1"
serde_json = "1.0.94"
